--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/content-types/_person-item--single.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/content-types/_person-item--single.scss
@@ -1,3 +1,14 @@
+/* 
+	person item detail view
+*/
+
+
+.is-headshot-and-bio {
+
+}
+
+
+
 .nu_start--person-item-single-type-a {
 	.wp-block-columns:not(.is-not-stacked-on-mobile)
 		.nu_person_detail--content-area.wp-block-column {
