--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid.scss
@@ -1,79 +1,14 @@
 /* 
-	PostsGrid Block Stylesheet
+
+	Posts-Grid Block Stylesheet
+	
 */
+
+// ? import vars,mixins,etc...
 @import "../library/";
-.nu_posts-grid {
-	// ? basics for aspect ratio for all items here
-	@mixin nu__grid_item_cover_ratios {
-		figure {
-			overflow: hidden;
-			position: relative;
-			margin: 0;
-		}
-		img {
-			width: 100%;
-			min-height: 100%;
-		}
 
-		&.has-very-wide-cover-image,
-		&.has-wide-cover-image,
-		&.has-tall-cover-image,
-		&.has-very-tall-cover-image,
-		&.has-square-cover-image {
-			img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				transform: scale(1);
-			}
-		}
-		&.has-square-cover-image {
-			figure {
-				@include aspect-ratio(1, 1);
-			}
-		}
-		&.has-wide-cover-image {
-			figure {
-				@include aspect-ratio(4, 3);
-			}
-		}
-		&.has-very-wide-cover-image {
-			figure {
-				@include aspect-ratio(16, 9);
-			}
-		}
-		&.has-tall-cover-image {
-			figure {
-				@include aspect-ratio(3, 4);
-			}
-		}
-		&.has-very-tall-cover-image {
-			figure {
-				@include aspect-ratio(9, 16);
-			}
-		}
-	}
-	// ? basics for horz/vert orientation here
-	@mixin nu__grid_item_orientation {
-		&.has-layout-horizontal {
-			> .contains-clickable-area,
-			& {
-				@media screen and (min-width: 781px) {
-					flex-flow: row nowrap;
-					> figure {
-						flex: 1 0 300px;
-						max-width: 50%;
-					}
-					> .grid-item-content {
-						flex: 1 1 auto;
-					}
-				}
-			}
-		}
-	}
-
+// ? scope and begin styling...
+.nu-acf-block.nu_posts-grid {
 	margin-top: $margin_2x;
 	margin-bottom: $base-margin;
 
@@ -89,38 +24,43 @@
 		padding: 0;
 	}
 
-	// ?
-
-	.nu__grid {
-		@include nu__responsive_grid_layout();
-	}
-	.grid-item {
-		@include nu__grid_item_cover_ratios();
-		@include nu__grid_item_orientation();
-		background-color: var(--wp--preset--color--white-1);
-	}
-
 	a.contains-clickable-area {
 		@include nu__boxshadow(0);
 		display: block;
 		text-decoration: none;
 		color: currentColor;
 		border: none;
-		//
-		.post-title span {
-			border-bottom: 0px solid currentColor;
-		}
 		&:hover,
 		&:focus {
 			border: none;
-			.post-title span {
-				border-bottom: 1px solid currentColor;
-			}
 			img {
 				transform: scale(1.2);
 			}
 
 			@include nu__boxshadow(5);
+		}
+	}
+
+	// ?
+	.nu__grid {
+		@include nu__responsive_grid_layout();
+	}
+
+	//
+	.grid-item {
+		@include nu__grid_item_cover_ratios();
+		@include nu__grid_item_orientation();
+		background-color: var(--wp--preset--color--white-1);
+
+		// is-horizontal modifier
+		&.has-layout-horizontal {
+			> .contains-clickable-area {
+				display: flex;
+				flex-flow: row nowrap;
+				figure {
+					flex: 0 1 220px;
+				}
+			}
 		}
 	}
 
@@ -132,12 +72,21 @@
 		font-size: var(--wp--preset--font-size--20-28);
 		font-weight: 300;
 	}
-	
 }
 
 .grid-item.nu_people {
+	// remove default margins from name
+	.full-name {
+		margin: 0;
+	}
+	// pad the content area
+	.grid-item-content {
+		padding: $margin_2x;
+		padding-bottom: $margin_3x + $half-margin;
+	}
+	// custom margin push title down from name
 	.primary-title {
-		margin-top: $base-margin;
+		margin-top: $base-margin + $half-margin;
 		font-size: var(--wp--preset--font-size--14-20);
 		font-weight: 300;
 	}
@@ -184,26 +133,6 @@ body.wp-admin {
 			img {
 				transform: scale(1.2);
 			}
-		}
-	}
-}
-
-.nu_posts-grid
-	.nu_profiles.grid-item.has-layout-horizontal
-	> .contains-clickable-area,
-.nu_posts-grid .nu_profiles.grid-item.has-layout-horizontal {
-	@include media(">=medium") {
-		> figure {
-			flex: 1 1 50%;
-			max-width: 50%;
-			max-height: 320px;
-			order: 2;
-		}
-		.grid-item-content {
-			flex: 1 1 50%;
-			max-width: 50%;
-			padding: $margin_2x !important;
-			justify-content: center;
 		}
 	}
 }
