--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-custom-elems.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-custom-elems.scss
@@ -1,4 +1,3 @@
-
 div.breadcrumbs[typeof="BreadcrumbList"] {
 	font-size: 12px;
 
@@ -248,32 +247,30 @@ div.breadcrumbs[typeof="BreadcrumbList"] {
 	font-feature-settings: "liga";
 }
 
-footer.site-footer {
-	.nu__footer-sidebar {
-		* {
-			color: var(--wp--preset--color--white-1);
-		}
+footer.site-footer .nu__footer-sidebar {
+	* {
+		color: var(--wp--preset--color--white-1);
+	}
 
-		div.wpforms-container-full {
-			form.wpforms-form {
-				display: flex;
-				flex-flow: row nowrap;
-				align-items: flex-start;
+	div.wpforms-container-full {
+		form.wpforms-form {
+			display: flex;
+			flex-flow: row nowrap;
+			align-items: flex-start;
 
-				.wpforms-submit-container {
-					margin-top: 22px; // ? WTF
-					button.wpforms-submit {
-						margin: 0;
-						height: 38px;
-						background-color: var(--wp--preset--color--red-3);
+			.wpforms-submit-container {
+				margin-top: 22px; // ? WTF
+				button.wpforms-submit {
+					margin: 0;
+					height: 38px;
+					background-color: var(--wp--preset--color--red-3);
+					border: 1px solid var(--wp--preset--color--red-3);
+					color: var(--wp--preset--color--white-1);
+					&:hover,
+					&:focus {
 						border: 1px solid var(--wp--preset--color--red-3);
-						color: var(--wp--preset--color--white-1);
-						&:hover,
-						&:focus {
-							border: 1px solid var(--wp--preset--color--red-3);
-							color: var(--wp--preset--color--red-3);
-							background-color: var(--wp--preset--color--white-1);
-						}
+						color: var(--wp--preset--color--red-3);
+						background-color: var(--wp--preset--color--white-1);
 					}
 				}
 			}
