--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/heroes/_shared-people-hero.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/heroes/_shared-people-hero.scss
@@ -1,13 +1,13 @@
 .is-people-archive-hero {
 
-	>.wp-block-group,
+	// >.wp-block-group,
 	>.wp-block-cover {
 		border-bottom: 1px solid var(--wp--preset--color--white-5);
 	}
 	> .wp-block-group {
 		margin: 0;
 		.nu__breadcrumbs {
-			padding: $margin_2x 0;
+			padding: $base-margin 0;
 		}
 	}
 }
