--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_header.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/_header.scss
@@ -470,16 +470,7 @@ header.header {
 
 				> ul {
 					//display: block !important;
-					> li {
-						//display: flex;
-						> a {
-								// border:1px solid red;
-						}
-						> .menu-item-toggle {
-							// top:5%;
-							// height:100%;
-						}
-					}
+
 
 					&.revealed {
 						height: auto;
@@ -674,102 +665,34 @@ body.is-dark-header {
 		margin-left: 7px;
 		padding: 0;
 		position: relative;
-		z-index: 1;
-		// position: absolute;
-		// top:40%;
-		// -webkit-transform: translateY(-40%);
-		// -moz-transform: translateY(-40%);
-		// -ms-transform: translateY(-40%);
-		// transform: translateY(-40%);
-		// right:0;
-
+		//z-index: 0;
 		&::after {
 			content: "\e313";
 			display: inline-block;
 			font-family: "Material Icons";
 			vertical-align: middle;
-			// position: absolute;
-			// top: 0;
-			// right: 0;
-			// line-height: 1;
 			font-size: 18px;
+		}
+		&:hover,
+		&:focus {
+			&:after {
+				color: #C00;
+			}
 		}
 		&.active {
 			&:after {
+				color: #C00;
 				transform: translateY(0%) rotate(90deg);
 			}
+		}
+	}
+
+	.menu-item-toggle[aria-expanded='false'] {
+		&:after {
+			color: #000;
 		}
 	}
 
 	ul li ul li > button {
 		top:30% !important;
 	}
-
-// .navlinks > .menu > .menu-item > .sub-menu {
-// 	display: none;
-// 	&.sub-menu {
-// 		display: none;
-// 		&.sub-menu {
-// 			display: none;
-// 		}
-// 	}
-// }
-
-
-
-
-
-
-
-// nav.navlinks {
-// 	display : flex;
-// 	height: 5pc;
-// 	> ul {
-// 		display: flex;
-// 		align-items: center;
-// 		margin:0;
-// 		list-style-type: none;
-// 		> li {
-// 			border-top: 0;
-// 			margin: 0 0 0 30px;
-// 			padding: 0;
-// 			text-align: center;
-// 			position: relative;
-// 			&.menu-item-has-children {
-// 				white-space: nowrap;
-// 			}
-// 			&:first-of-type {
-// 				margin-left:0;
-// 			}
-// 			> a {
-// 				display: inline-block;
-// 				position: relative;
-// 				z-index:2;
-// 				height: 100%;
-// 			}
-// 			> .menu-item-toggle {
-// 				background: transparent;
-// 				border: 0;
-// 				cursor: pointer;
-// 				margin-left: 7px;
-// 				padding: 0;
-// 				position: relative;
-// 				&:after {
-// 					content: "\e313";
-// 					display: inline-block;
-// 					font-family: Material Icons;
-// 					vertical-align: middle;
-// 				}
-// 			}
-// 			> ul.sub-menu {
-// 				border: 1px solid green;
-// 				left: 50%;
-// 				margin: 0;
-// 				position: absolute;
-// 				top: calc(100% + 28px);
-// 				-webkit-transform: translateX(-50%);
-// 				transform: translateX(-50%);
-// 			}
-// 		}
-// 	}
-// }
