--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/content-types/_people-related-patterns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/content-types/_people-related-patterns.scss
@@ -7,7 +7,7 @@
 		border-bottom: 1px solid var(--wp--preset--color--white-5);
 	}
 
-	.nu_posts-grid {
+	.posts-grid {
 		margin-top: $margin_4x;
 
 		.nu__grid > ul {
