--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/patterns.scss
@@ -1,18 +1,17 @@
+// 
+// 
+// 
 @import "../library";
+
+// 
+// 
 @import "./landing-pages/landing-page-has-sidebar";
-@import "./heroes/shared-people-hero";
+
+// 
+// 
 @import "./content-types/people-related-patterns";
 
-// ? maybe for trev
-.pattern--hero-basic-breadcrumbs {
-	// >.wp-block-group,
-	> .wp-block-cover {
-		border-bottom: 1px solid var(--wp--preset--color--white-5);
-	}
-	> .wp-block-group {
-		margin: 0;
-		.nu__breadcrumbs {
-			padding: $base-margin 0;
-		}
-	}
-}
+
+// 
+// 
+@import "./heroes/basic-with-breadcrumbs";
