compiled all the block stylesheets back into the main one
had too many issues w/ back end

--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/filters/_filtering.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/filters/_filtering.scss
@@ -5,9 +5,9 @@
 
 */
 
-.filteringform {
-	@import "./nu-select2";
+@import "./nu-select2";
 
+.filteringform {
 	+ .nu__grid {
 		margin-top: $margin_4x;
 	}
@@ -23,6 +23,8 @@
 	}
 
 	> form {
+		padding: $base-margin;
+		border: 1px solid #ece9e6;
 		position: relative;
 		background-color: var(--wp--preset--color--white-1);
 		display: flex;
@@ -62,9 +64,9 @@
 				text-align: center;
 				font-size: var(--wp--preset--font-size--14-20);
 				padding: $base-margin $margin_2x;
-				border: 1px solid #ece9e6;
 				font-weight: 400;
 				border-radius: 48px;
+				border: 1px solid #ece9e6;
 				span.material-icons-outlined {
 					position: absolute;
 					top: 50%;
