--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-basic-elems.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-basic-elems.scss
@@ -24,6 +24,8 @@ a {
 	? 	styles below restricted to within the blocks wrapper -- avoid touching footer/header etc
 */
 .blocks--wrapper {
+
+	a.button,
 	button.button {
 		@extend %nu__buttonstyle;
 	}
