--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/filters/_nu-select2.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/posts-grid/filters/_nu-select2.scss
@@ -25,10 +25,6 @@
 
 	.select2-selection__choice {
 		margin: 0;
-		&:not(:first-child) {
-			margin-left: $half-margin;
-		}
-
 		+ .select2-search.select2-search--inline {
 			display: none;
 		}
@@ -58,4 +54,36 @@
 		margin: 0;
 		font-size: var(--wp--preset--font-size--14-20);
 	}
+}
+
+.select2-results__option {
+	vertical-align: middle;
+	&:before {
+		content: "";
+		display: inline-block;
+		position: relative;
+		height: 20px;
+		width: 20px;
+		vertical-align: middle;
+		margin-right: $base-margin;
+		border-radius: 4px;
+		border: 2px solid #e9e9e9;
+		background-color: var(--wp--preset--color--white-1);
+	}
+}
+.select2-results__option[aria-selected="true"]:before {
+	content: "\e876";
+	color: #fff;
+	background-color: var(--wp--preset--color--black-2);
+	border: 0;
+	display: inline-block;
+	padding-left: 3px;
+}
+.select2-container--default .select2-results__option[aria-selected="true"] {
+	background-color: #fff;
+}
+.select2-container--default
+	.select2-results__option--highlighted[aria-selected] {
+	background-color: #eaeaeb;
+	color: var(--wp--preset--color--black-2);
 }
