--- a/wp-content/themes/nu-start/__precomp/source/css/main.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/main.scss
@@ -10,6 +10,8 @@
 // include styles for blocks
 @import './gutenberg';
 
+@import './blocks';
+
 // include frontend only styles
 @import './frontend';
 
