--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
@@ -6,7 +6,7 @@
 @import './testimonials';
 @import './newsletter-sections';
 @import './faq-sections';
-@import './content-types';
+// @import './content-types';
 
 
 // todo: structure this properly
