--- a/wp-content/themes/nu-start/__precomp/source/css/main.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/main.scss
@@ -7,6 +7,9 @@
 // include rfs and other library stuff
 @import './library';
 
+
+@import './partials';
+
 // include styles for blocks
 @import './gutenberg';
 
