--- a/wp-content/themes/nu-start/style.css
+++ b/wp-content/themes/nu-start/style.css
@@ -7,5 +7,5 @@ Description: Our WordPress starter theme
 Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: nu-start
+Text Domain: nustart
 */
