--- a/wp-content/themes/nu-start-child/src/styles/refactored/_slide-contents.scss
+++ b/wp-content/themes/nu-start-child/src/styles/refactored/_slide-contents.scss
@@ -114,3 +114,38 @@
 		}
 	}
 }
+
+
+// ? we are REQUIRING the <strong> (from bold) to target the text elem (wish it did span!)
+p.is-the-play-button-shim {
+	margin-top: $margin_2x;
+	a {
+		border-bottom: 0px solid transparent;
+		strong {
+			border-bottom: 1px solid transparent;
+			font-weight: 300;
+
+		}
+		i.icon, & {
+			display: inline-block;
+			vertical-align: middle;
+		}
+		i.icon {
+			font-size: var(--wp--preset--font-size--60-60);
+			line-height: 0;
+			transform: scale(1);
+			@extend %transition;
+		}
+
+		&:hover, &:focus {
+			border-bottom: 0px solid transparent;
+			strong {
+				border-bottom: 1px solid currentColor;
+			}
+			i.icon {
+				color: var(--wp--preset--color--red-3);
+				transform: scale(1.2);
+			}
+		}
+	}
+}
