--- a/wp-content/themes/nu-start/__precomp/source/css/patterns/content-types/_event-related-patterns.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/patterns/content-types/_event-related-patterns.scss
@@ -11,4 +11,23 @@
 			}
 		}
 	}
+
+
+	.event-type {
+		font-weight: 400;
+	}
+	
+	.wp-block-group + .wp-block-buttons {
+		margin-top: ($margin_2x + $half-margin);
+	}
+	.event-info:last-child {
+		margin-top: 0;
+	}
+
+	.wp-block-post-title {
+		margin: ($margin_2x + $half-margin) 0;
+	}
+	
+	
+	
 }
