--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/_button.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/_button.scss
@@ -2,7 +2,14 @@
 
 */
 
+// ? square up the layout
+.wp-block-buttons{
+	margin: $base-margin 0;
+	gap: $base-margin !important;
+}
+
 .wp-block-button {
+	
 	// * fill is default and may not have a class
 	&:not(.is-style-outline) {
 		//
@@ -18,7 +25,7 @@
 					border-color: var(--wp--preset--color--black-1);
 				}
 			}
-			&:not(.has-text-color) {
+		&:not(.has-text-color) {
 				border: 2px solid var(--wp--preset--color--black-1);
 			}
 			&.has-background {
